# compose-release-assurance

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
apps/ledger-api/ledger_api/: __init__.py  application.py  errors.py  integrity.py  ledger.py  models.py  ports.py  postgres_store.py
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  DEVELOPMENT.md  ENGINEERING_GUARDRAILS.md  INTEGRATION_CONTRACTS.md  LICENSE_POLICY.md  PRODUCT_VISION.md  TECHNOLOGY_STACK.md  THREAT_MODEL.md
docs/adr/: 0001-host-cli-orchestration.md  0002-python-first-runtime-and-language-boundaries.md  0003-python-314-runtime-baseline.md  0004-source-available-no-sale-license-policy.md  0005-postgresql-relational-ledger-persistence-baseline.md  README.md
infra/postgres/: compose.integration.yaml
infra/postgres/migrations/: 0001_ledger_schema.sql
scripts/: verify-postgres-schema.ps1
tests/: test_ledger_application.py  test_ledger_domain.py  test_postgres_ledger_store.py  test_postgresql_schema_contract.py  test_runtime_policy.py
