[project]
name = "compose-release-assurance"
version = "0.1.0a0"
description = "Release rehearsal and evidence framework for Docker Compose-based stateful services."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "psycopg[binary]>=3.3.4,<3.4",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["apps/ledger-api"]

[tool.mypy]
python_version = "3.14"
files = ["apps/ledger-api", "tests"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/apps/ledger-api"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "apps/ledger-api"}

[tool.setuptools.packages.find]
where = ["apps/ledger-api"]
include = ["ledger_api*"]
